// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`object should ignore optional: null 1`] = `
Object {
  "errors": Array [],
  "value": null,
}
`;

exports[`object should ignore optional: undefined 1`] = `
Object {
  "errors": Array [],
  "value": undefined,
}
`;

exports[`object should return a custom message 1`] = `
Object {
  "errors": Array [
    Object {
      "error": "custom message",
      "path": "value",
    },
  ],
  "value": 12,
}
`;

exports[`object should return a value for a valid object 1`] = `
Object {
  "errors": Array [],
  "value": Object {
    "foo": "bar",
  },
}
`;

exports[`object should return an error for: 1 1`] = `
Object {
  "errors": Array [
    Object {
      "error": "must be an",
      "path": "value",
    },
  ],
  "value": 1,
}
`;

exports[`object should return an error for: 1,2,3 1`] = `
Object {
  "errors": Array [],
  "value": Array [
    1,
    2,
    3,
  ],
}
`;

exports[`object should return an error for: abc 1`] = `
Object {
  "errors": Array [
    Object {
      "error": "must be an",
      "path": "value",
    },
  ],
  "value": "abc",
}
`;
